tests/NormalTests/paczka1/small_fuzzy/30106286.err
Error in line 8: A889 S328 37,8
Error in line 12: SU2XRVj A648 62,8
